@@ -1,4 +1,6 @@
 ver 0.20.22 (not yet released)
+* protocol
+  - add tag fallbacks for AlbumArtistSort, ArtistSort
 * storage
   - curl: URL-encode paths
 * Android
